Review Request 7126 - PLS-2549: Fixed alignment issue in Custom Fields

--- a/le-ui/projects/common/assets/sass/_buttons.scss
+++ b/le-ui/projects/common/assets/sass/_buttons.scss
@@ -362,7 +362,7 @@ Use this structure for angled buttons:
     &.active {
         padding-bottom: 2px;
         margin-bottom: -1px;
-        background: #f5f5f5;
+        background: #fafafa;
         z-index: 2;
         &:not(.clickable) {
           pointer-events: none;
