--- a/le-ui/projects/common/assets/sass/_forms.scss
+++ b/le-ui/projects/common/assets/sass/_forms.scss
@@ -125,7 +125,6 @@ output {
   font-size: 16px;
   line-height: 1.42857143;
   color: #555555;
-  background-color: #ffffff;
   background-image: none;
   border: 1px solid #aaaaaa;
   border-radius: 0;
