--- a/le-ui/projects/leadprioritization/app/apiConsole/views/APIConsoleStyle.scss
+++ b/le-ui/projects/leadprioritization/app/apiConsole/views/APIConsoleStyle.scss
@@ -16,13 +16,13 @@
         left: 0;
         border-width: 0px 32px 32px 0px;
         border-style: none solid solid none;
-        border-color: transparent transparent #FFF transparent;
+        border-color: transparent transparent #fafafa transparent;
     }
     .summary .caption.right {
         right: 0;
         border-width : 0 32px 32px 32px;
         border-style : none solid solid solid;
-        border-color : transparent #FFF #FFF transparent;
+        border-color : transparent #fafafa #fafafa transparent;
     }
     .summary .fa-exchange {
         position: absolute;
